--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Inventory Step 1 Dashboard</title>
+  <title>Records Compliance</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="css/keen-dash.css" />
 </head>
-<body class="application step1">
+<body class="application main">
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -16,7 +16,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./">Inventory Step 1 Dashboard</a>
+        <a class="navbar-brand" href="./">Records Compliance</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-left"></ul>
@@ -294,7 +294,6 @@
 
     <hr>
 
-    <p class="small text-muted">Built with &#9829; by <a href="http://sandiego.gov/pad">P&A</a></p>
 
   </div>
 
