--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="container-fluid">
+  <div class="container-fluid main-container">
     <!-- ROW -->
     <div class="row">
        <div class="col-sm-12 col-md-12 col-lg-12 col-xs-12">
@@ -37,259 +37,6 @@
     </div>
   <!-- END ROW -->
 
- <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-   <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-  <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-  <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-  <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-  <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-  <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-  <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-  <!-- ROW -->
-    <div class="row">
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-3">
-        <div class="chart-wrapper">
-          <div class="chart-title"></div>
-          <div class="chart-stage"></div>
-        </div>
-      </div>
-    </div>
-  <!-- END ROW -->
-
 
 
     <hr>
@@ -297,6 +44,18 @@
 
   </div>
 
+
+  <!-- BEGIN: Lodash Template Definition. -->
+  <script type="text/template" class="dashBox">
+    <div class="col-sm-6 col-md-3">
+      <div class="chart-wrapper">
+        <div class="chart-title">
+          <%- rc.title %>
+        </div>
+        <div class="chart-stage" id="stageId-<%- rc.index %>"></div>
+      </div>
+    </div>
+  </script>
   <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
   <script src="js/raphael.2.1.0.min.js"></script>
