--- a/ds1.html
+++ b/ds1.html
@@ -8,6 +8,16 @@
   	<script async="" src="./ds1_files/analytics.js"></script><script src="./ds1_files/global.js" language="Javascript" type="text/javascript"></script>
   	<link rel="stylesheet" href="http://citynetstg.sannet.gov/global/global.css">
 	<link rel="stylesheet" href="./ds1_files/cityclerk.css" type="text/css">
+  <!--<script src="//code.jquery.com/jquery-1.11.3.min.js"></script> -->
+<script type="text/javascript">
+  /*$(document).ready(function() {
+      setTimeout(function() {
+        console.log("ready");
+        var iframe = $("#rec-iframe").attr("src", "index.html").attr("width", "100%");
+        iframe.appendTo(".records-iframe");
+        }, 5000);
+  });*/
+</script>
 
 
 <style id="style-1-cropbar-clipper">/* Copyright 2014 Evernote Corporation. All rights reserved. */
@@ -161,16 +171,6 @@
 <body>
 <!-- Start globaltop serverside include -->
 <script src="./ds1_files/googleanalytics.js" type="text/javascript"></script>
-<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
-<script type="text/javascript">
-  /*$(document).ready(function() {
-      setTimeout(function() {
-        console.log("ready");
-        var iframe = $("#rec-iframe").attr("src", "index.html").attr("width", "100%");
-        iframe.appendTo(".records-iframe");
-        }, 5000);
-  });*/
-</script>
 <!-- Start Top Banner -->
 <table width="100%" cellpadding="0" cellspacing="0" border="0" style="background-color:#000066;">
   <tbody><tr valign="top">
@@ -230,9 +230,8 @@
 
 <table width="75%" cellpadding="10" cellspacing="0" border="0">
 	<tbody><tr>
-		<td class="records-iframe">
-      <iframe id="rec-iframe" src="about:blank" width="100%">
-      </iframe>
+		<td>
+      <iframe id="rec-iframe" src="http://recdash-pp.surge.sh" width="1000px" height="3500px"></iframe>
 	<!--h1>Records Compliance</h1-->
 
 </td></tr></tbody></table></html>
