--- a/index.html
+++ b/index.html
@@ -50,10 +50,18 @@
   <script type="text/template" class="dashBox">
     <div class="col-sm-6 col-md-3">
       <div class="chart-wrapper">
-        <div class="chart-title">
+        <div class="chart-title col-sm-12 col-md-12">
           <%- rc.title %>
         </div>
+
         <div class="chart-stage" id="stageId-<%- rc.index %>"></div>
+        <div class="rds-link col-sm-12 col-md-12">
+          <% if (rc.rdsLink !== "") { %>
+            <a href="<%- rc.rdsLink %>" title="<%- rc.title %> rds" target="_blank">
+               Current RDS
+            </a>
+          <% } %>
+        </div>
       </div>
     </div>
   </script>
