--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Records Compliance</title>
+  <title>City of SD Employee Survey</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
@@ -17,7 +17,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="./">Records Compliance</a>
+        <a class="navbar-brand" href="./">Survey Participation Rate</a>
       </div>
       <div class="navbar-collapse collapse">
         <ul class="nav navbar-nav navbar-left"></ul>
@@ -55,13 +55,6 @@
         </div>
 
         <div class="chart-stage" id="stageId-<%- rc.index %>"></div>
-        <div class="rds-link col-sm-12 col-md-12">
-          <% if (rc.rdsLink !== "") { %>
-            <a href="<%- rc.rdsLink %>" class = "rdsLink" title="<%- rc.title %> rds" target="_blank">
-               Current RDS
-            </a>
-          <% } %>
-        </div>
       </div>
     </div>
   </script>
@@ -79,8 +72,8 @@
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-    ga('create', 'UA-57709205-5', 'auto');
-    ga('send', 'pageview');
+    //ga('create', 'UA-57709205-5', 'auto');
+    //ga('send', 'pageview');
   </script>
 
 </body>
